# opengl_donut

./: CMakeLists.txt
assets/shaders/: basic.vert
include/app/: app.h
include/core/: input.h
include/core/math/: mat4.h  quat.h  vec2.h  vec3.h  vec4.h
include/engine/: mesh.h  scene.h
include/engine/assets/: mesh.h
include/engine/components/: camera.h  mesh_renderer.h  meshrenderer.h  transform.h
include/engine/renderer/: gpu_mesh.h  renderer.h  shader_program.h
include/engine/scene/: gameobj.h  scene.h
include/utilities/: string_utils.h
src/: main.cpp
src/app/: app_data.cpp  app_event_handler.cpp  app_postupdate.cpp  app_quit.cpp  app_render.cpp  app_start.cpp  app_update.cpp
src/core/: input.cpp
src/core/math/: mat4.cpp
src/engine/: scene.cpp
src/engine/assets/: cubemesh.cpp  mesh.cpp
src/engine/components/: camera.cpp  mesh_renderer.cpp  meshrenderer.cpp  transform.cpp
src/engine/mesh/: cubemesh.cpp
src/engine/renderer/: gpu_mesh.cpp  renderer.cpp  shader_program.cpp
src/engine/resources/: mesh.cpp
src/engine/scene/: gameobj.cpp
src/utilities/: string_utils.cpp
